# fussballgott

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  authors.html  contributing.html  desktop.ini  fussballgott.html  genindex.html  history.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tutorial.html  usage.html
.doctrees/: authors.doctree  contributing.doctree  environment.pickle  fussballgott.doctree  history.doctree  index.doctree  installation.doctree  modules.doctree  tutorial.doctree  usage.doctree
.doctrees/tutorial_league/: tutorial_league.doctree
.doctrees/tutorial_single_game/: tutorial_single_game.doctree
.doctrees/tutorial_tournament/: tutorial_tournament.doctree
.github/workflows/: ci.yml  docs.yml  test.yml
_modules/: index.html
_modules/fussballgott/: fussball.html  league.html  load.html  plot.html  team.html  tournament.html
_sources/: index.rst.txt  installation.rst.txt
_sources/tutorial_tournament/: tutorial_tournament.rst.txt
_static/css/: theme.css
demos/.ipynb_checkpoints/: demo_leagues-checkpoint.ipynb  demo_tournament-checkpoint.ipynb
demos/euro2020/: demo_tournament_special_rule.CSV
demos/euro2024/: demo_tournament.ipynb  demo_tournament_2.CSV  demo_tournament_4.CSV  demo_tournament_8.CSV  demo_tournament_mode.CSV  demo_tournament_special_rule.CSV  demo_tournament_teams.CSV  individual_games.ipynb
demos/league/: demo_league.CSV  demo_league_sep_schedule.CSV  demo_league_sep_table.CSV  demo_leagues.ipynb
demos/single_games/: demo_single_game.ipynb
demos/tournament/: demo_tournament.ipynb  (+3 more)
docs/: conf.py  fussballgott.rst  index.rst  installation.rst  modules.rst  tutorial.rst  usage.rst
fussballgott/: __init__.py  fussball.py  league.py  load.py  plot.py  team.py  tournament.py
fussballgott.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_fussballgott.py
tutorial_league/: tutorial_league.html
tutorial_single_game/: tutorial_single_game.html
tutorial_tournament/: tutorial_tournament.html
(+20 files in other folders)
