[metadata]
name = fussballgott
version = attr: fussballgott.__version__
license = MIT License
description = Code to run simulations of football games, leagues and tournaments
long_description = file: README.md
long_description_content_type = text/markdown
author = Silvan Fischbacher
author_email = silvan.fischbacher@greenmail.ch
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
project_urls =
    Source = https://cosmo-docs.phys.ethz.ch/fussballgott

[options]
install_requires =
    matplotlib
    numpy
    pandas
    seaborn
    tqdm

packages = find:
package_dir =
    =src
zip_safe = False
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
* =
    AUTHORS.rst
    HISTORY.rst
    LICENSE
    README.md

[options.extras_require]
dev =
    twine
    pytest
    pytest-cov
    pytest-regtest
    tox
    flake8
    black @ git+https://github.com/psf/black   # binary wheels are broken on some machines
    isort
    sphinx
    sphinx-pynpoint-theme
    myst-parser
docs =
    sphinx
    sphinx-pynpoint-theme
    myst-parser
